<?xml version="1.0"?>
<package>
  <name>dds_ros_bridge</name>
  <version>0.0.0</version>
  <description>
    The dds_ros_bridge package provides a bridge between ros messages and dds messages
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>config_reader</build_depend>
  <build_depend>ff_util</build_depend>
  <build_depend>ff_msgs</build_depend>
  <build_depend>ff_hw_msgs</build_depend>
  <build_depend>dds_msgs</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>config_reader</run_depend>
  <run_depend>ff_util</run_depend>
  <run_depend>ff_msgs</run_depend>
  <run_depend>ff_hw_msgs</run_depend>
  <run_depend>dds_msgs</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
